# shiftmaster-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  generate_k8s_base.py  generate_k8s_overlays.py  patch_openapi.py  pyproject.toml  pytest.ini  run_manual_test.py  scratch_test.py  test.env  test_config.py  test_env.env
.github/workflows/: ci.yml  pipeline.yml
app/: main.py
app/api/: deps.py  router.py
app/api/routers/: audit.py  auth.py  departments.py  employees.py  handovers.py  (+2 more)
app/core/: config.py  enums.py  logging.py  middleware.py  redis.py  security.py
app/db/: pool.py
app/events/: broker.py  consumers.py  schemas.py
app/repositories/: audit_repo.py  base.py  department_repo.py  employee_repo.py  handover_repo.py  schedule_repo.py  task_repo.py
app/schemas/: audit_schema.py  auth_schema.py  common.py  employee_schema.py  handover_schema.py  schedule_schema.py  task_schema.py
app/services/: audit_service.py  department_service.py  employee_service.py  notification_service.py  schedule_service.py  shift_service.py  task_service.py
migrations/: 001_extensions.sql  002_types.sql  003_tables.sql  004_indexes.sql  005_views.sql  006_functions.sql  007_triggers.sql  008_seed_data.sql  009_task_boards.sql  010_uniqueness_constraints.sql  011_secondary_contacts_leave_approvals.sql  012_hourly_leave_and_fixes.sql  013_task_recurring_assignments.sql  014_fix_task_executions.sql  015_add_completion_type.sql  016_multi_manager_departments.sql  017_dynamic_leave_types.sql  018_multi_tenant.sql  019_info_tables.sql  020_help_documents.sql  021_add_employee_help_docs_permission.sql  022_add_employee_ui_preferences.sql  023_add_announcements.sql  024_fiberx_data.sql  024_push_subscriptions.sql  025_leave_balances.sql  026_monthly_hourly_leaves.sql  027_shift_handovers.sql  028_external_modules.sql  029_announcement_images.sql  030_department_fiberx_toggle.sql  031_add_claimer_notes_to_handovers.sql  032_failed_login_attempts.sql  033_ip_blocks.sql  034_add_is_ticker_to_announcements.sql  035_department_max_leaves.sql  036_handover_improvements.sql  037_department_modules.sql
scripts/: seed_data.py  start.sh
services/auth/: Dockerfile  pyproject.toml
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: main.py
services/gateway/app/core/: config.py
services/notifications/: Dockerfile  pyproject.toml
services/notifications/app/: main.py
services/notifications/app/api/: deps.py
services/notifications/app/api/routers/: audit.py  notifications.py
services/notifications/app/core/: config.py
services/notifications/app/db/: pool.py
services/notifications/app/events/: consumer.py
services/notifications/app/repositories/: audit_repo.py  notification_repo.py
services/notifications/app/services/: audit_service.py  notification_service.py
services/notifications/migrations/: 001_initial_schema.sql  yoyo.ini
services/schedule/: Dockerfile  pyproject.toml
shared/: pyproject.toml
shared/shiftmaster_common/cache/: redis_client.py
shared/shiftmaster_common/logging/: structured.py
shared/shiftmaster_common/messaging/: events.py  rabbitmq.py
shared/shiftmaster_common/middleware/: openapi.py  setup.py
shared/shiftmaster_common/security/: jwt_utils.py
tests/: conftest.py
tests/api/: test_audit.py  test_departments.py  test_employees.py  test_handovers.py  test_schedules.py  test_shifts.py  test_tasks.py
(+52 files in other folders)
