[project]
name = "shiftmaster-api"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    # ── Web framework ─────────────────────────────────────────────────
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # ── Database ─────────────────────────────────────────────────────
    "psycopg[binary,pool]>=3.2",
    "psycopg2-binary>=2.9",     # yoyo-migrations driver
    "yoyo-migrations>=8.2",

    # ── Validation / settings ─────────────────────────────────────────
    "pydantic>=2.9",
    "pydantic-settings>=2.5",

    # ── Auth / security ───────────────────────────────────────────────
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",

    # ── HTTP client (service-to-service calls, Phase 2+) ─────────────
    "httpx>=0.27",

    # ── Observability ─────────────────────────────────────────────────
    "structlog>=24.1",
    "asgi-correlation-id>=4.3",

    # ── Redis (caching, rate-limiting, session management) ────────────
    "redis[asyncio]>=5.0",

    # ── Resilience ────────────────────────────────────────────────────
    "tenacity>=8.5",

    # ── Messaging (Phase 1) ───────────────────────────────────────────
    "aio-pika>=9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",   # for TestClient
]

[tool.setuptools.packages.find]
include = ["app*"]
