[project]
name = "shiftmaster-gateway"
version = "0.1.0"
description = "ShiftMaster API Gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "tenacity>=8.5",
    "shiftmaster-common",
]

[tool.setuptools.packages.find]
include = ["app*"]
