[project]
name = "shiftmaster-notifications"
version = "0.1.0"
description = "ShiftMaster Notifications Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "tenacity>=8.5",
    "python-multipart>=0.0.9",
    "shiftmaster-common",
]

[tool.setuptools.packages.find]
include = ["app*"]
